# tracey

./: .gitignore  Cargo.toml  README.md  README.md.in  asciidoc-plan.md  dist-workspace.toml  unhand-spec.md
.config/: dodeca.styx  nextest.toml
.config/tracey/: config.kdl  config.yaml  test_rules.json
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
crates/tracey/: Cargo.toml  build.rs
crates/tracey-api/src/: lib.rs
crates/tracey-config/: Cargo.toml
crates/tracey-config/src/: lib.rs
crates/tracey-core/: Cargo.toml
crates/tracey-core/src/: code_units.rs  coverage.rs  languages.rs  lexer.rs  lib.rs  markdown.rs  rule_id.rs  sources.rs  spec.rs
crates/tracey-core/src/spec/: markdown.rs  mod.rs  registry.rs  sdoc.rs  typst.rs
crates/tracey-core/src/spec/asciidoc/: ast_walk.rs  mod.rs
crates/tracey-core/tests/: markdown_integration.rs
crates/tracey-core/tests/fixtures/: duplicate_rules.md  sample_spec.md
crates/tracey-lsp-proto/: Cargo.toml  README.md  test_file.rs
crates/tracey-lsp-proto/src/: main.rs
crates/tracey-proto/: Cargo.toml
crates/tracey-proto/src/: lib.rs
crates/tracey/dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/tracey/dashboard/src/: api-types.ts  config.ts  hooks.ts  main.tsx  router.ts  style.css  types.ts  utils.ts
crates/tracey/dashboard/src/components/: InlineEditor.tsx  code-view.tsx  coverage-arc.tsx  file-path.tsx  file-tree.tsx  header.tsx  icons.tsx  outline.tsx  search.tsx
crates/tracey/dashboard/src/views/: coverage.tsx  sources.tsx  spec.tsx
crates/tracey/skill/references/: tracey-spec.md
crates/tracey/src/: bump.rs  config.rs  dashboard.html  data.rs  errors.rs  lib.rs  lsp.rs  main.rs  manifest.rs  mcp.rs  output.rs  rule_suggestions.rs  sdoc.rs  search.rs  serve.rs  serve2.rs  serve_script.js  serve_styles.css  server.rs
crates/tracey/src/bridge/: export.rs  http.rs  lsp.rs  mcp.rs  mod.rs  query.rs
crates/tracey/src/bridge/export/: components.rs  enhance.js  extra.css  mod.rs  pages.rs  tests.rs
crates/tracey/src/bridge/http/: mod.rs
crates/tracey/src/bridge/http/dashboard/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
crates/tracey/src/bridge/http/dashboard/src/: api-types.ts  config.ts  hooks.ts  main.tsx  router.ts  style.css  style.scss
crates/tracey/src/bridge/http/dashboard/src/components/: InlineEditor.tsx
crates/tracey/src/bridge/http/dashboard/src/views/: sources.tsx  spec.tsx
crates/tracey/src/bridge/http/dashboard/tests/: dashboard.spec.ts
crates/tracey/src/daemon/: client.rs  connection.rs  engine.rs  framing.rs  mod.rs  service.rs  watcher.rs
crates/tracey/tests/: asciidoc_spec_tests.rs  bump_tests.rs  cli_integration.rs  integration_tests.rs  lsp_diagnostic_lifecycle_tests.rs  lsp_multiroot_bridge_tests.rs  marq_tests.rs  mcp_tests.rs  sdoc_corpus_smoke.rs  sdoc_integration.rs  typst_spec_tests.rs  watcher_tests.rs
crates/tracey/tests/common/: mod.rs
crates/tracey/tests/fixtures/: config.kdl  other-spec.md  spec.md
crates/tracey/tests/fixtures-asciidoc/: config.styx  spec.adoc
crates/tracey/tests/fixtures-asciidoc/src/: lib.rs  tests.rs
crates/tracey/tests/fixtures-strictdoc/: config.styx  spec.sdoc
crates/tracey/tests/fixtures-strictdoc/src/: lib.rs
crates/tracey/tests/fixtures-test-include/: config.styx  spec.md
crates/tracey/tests/fixtures-test-include/src/: lib.rs
crates/tracey/tests/fixtures-test-include/tests/: auth_test.rs
crates/tracey/tests/fixtures-typst/: config.styx  helper.typ  spec.typ
crates/tracey/tests/fixtures-typst/src/: lib.rs  tests.rs
crates/tracey/tests/fixtures/src/: lib.rs
crates/xtask/src/: main.rs
docs/content/: _index.md
docs/content/guide/: _index.md  ai-integration.md  annotating-code.md  cli-reference.md  configuration.md  dashboard.md  editor-integration.md  getting-started.md  versioning.md  writing-specs.md
docs/content/spec/: _index.md  tracey.md
docs/guide/: annotating-code.md  cli-reference.md  configuration.md  editor-integration.md
docs/spec/: tracey.md
docs/static/: main.css
docs/superpowers/specs/: 2026-05-15-pluggable-spec-formats-design.md
docs/templates/: base.html  index.html  page.html  section.html
plans/css/: 001-DONE-nesting.md  002-TODO-utility-classes.md  003-TODO-data-attributes.md  004-DONE-selector-grouping.md  004-TODO-selector-grouping.md  005-DONE-color-system.md  005-TODO-color-system.md  006-DONE-logical-properties.md  007-DONE-cascade-layers.md  008-TODO-container-queries.md  009-TODO-scope.md  010-DONE-animations.md  011-DONE-typography.md  012-DONE-spacing.md  overview.md
tracey-zed/: Cargo.toml  README.md  README.md.in  extension.toml
tracey-zed/src/: lib.rs
typst-package/tracey/: README.md  lib.typ  typst.toml
