[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/tracey"
authors = ["Amos Wenger <amos@bearcove.eu>"]

[workspace.dependencies]
# Internal
tracey-core = { path = "crates/tracey-core", version = "0.5.0" }

# Facet ecosystem
facet = "0.35"
facet-args = "0.35"
facet-kdl = "0.35"

# Error handling
eyre = "0.6"
color-eyre = "0.6"
miette = { version = "7", features = ["fancy-no-backtrace"] }
thiserror = "2"

# HTTP fetching
ureq = { version = "3", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File walking (gitignore-aware)
ignore = "0.4"

# Parallel processing
rayon = "1"

# Pretty output
owo-colors = "4"

# Syntax highlighting for miette
syntect = "5"
