[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.metadata.cargo-shear]
# Used by #[facet(derive(Error))] macro in tracey
ignored = ["facet-error"]

[workspace.package]
version = "1.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/tracey"
authors = ["Amos Wenger <amos@bearcove.eu>"]

[workspace.dependencies]
# Internal
tracey-core = { path = "crates/tracey-core", version = "1.3.0", default-features = false }
tracey-api = { path = "crates/tracey-api", version = "1.3.0" }
tracey-proto = { path = "crates/tracey-proto", version = "1.3.0" }
tracey-config = { path = "crates/tracey-config", version = "1.3.0" }

# Facet ecosystem
facet = { version = "0.44" }
facet-axum = { version = "0.44" }
facet-styx = { version = "2.0.0" }
facet-json = { version = "0.44" }
facet-error = { version = "0.44" }

# Styx
styx-embed = { version = "2.0.0" }

# Figue
figue = { version = "2.0.0" }

# Error handling
eyre = "0.6"

# File walking (gitignore-aware)
ignore = "0.4"
globset = "0.4"

# Parallel processing
rayon = "1"

# Pretty output
owo-colors = "4"
strsim = "0.11"

# Tree-sitter parsing (for reverse traceability)
arborium = { version = "2.16.0", features = [
  "lang-rust",
  "lang-c",
  "lang-cpp",
  "lang-go",
  "lang-zig",
  "lang-javascript",
  "lang-typescript",
  "lang-tsx",
  "lang-python",
  "lang-ruby",
  "lang-java",
  "lang-kotlin",
  "lang-scala",
  "lang-bash",
  "lang-json",
  "lang-yaml",
  "lang-toml",
  "lang-xml",
  "lang-html",
  "lang-css",
  "lang-scss",
  "lang-markdown",
  "lang-sql",
  "lang-swift",
  "lang-elixir",
  "lang-haskell",
  "lang-ocaml",
  "lang-lua",
  "lang-php",
  "lang-r",
  "lang-dart",
  "lang-asm",
  "lang-x86asm",
  "lang-matlab",
  "lang-perl",
  "lang-erlang",
  "lang-clojure",
  "lang-fsharp",
  "lang-vb",
  "lang-cobol",
  "lang-julia",
  "lang-d",
  "lang-powershell",
  "lang-cmake",
  "lang-nix",
  "lang-lean",
] }
arborium-rust = "2.16.0"
arborium-swift = "2.16.0"
arborium-go = "2.16.0"
arborium-java = "2.16.0"
arborium-python = "2.16.0"
arborium-typescript = "2.16.0"
arborium-php = "2.16.0"
arborium-c = "2.16.0"
arborium-cpp = "2.16.0"
arborium-ruby = "2.16.0"
arborium-r = "2.16.0"
arborium-dart = "2.16.0"
arborium-lua = "2.16.0"
arborium-asm = "2.16.0"
arborium-matlab = "2.16.0"
arborium-perl = "2.16.0"
arborium-haskell = "2.16.0"
arborium-elixir = "2.16.0"
arborium-erlang = "2.16.0"
arborium-clojure = "2.16.0"
arborium-fsharp = "2.16.0"
arborium-vb = "2.16.0"
arborium-cobol = "2.16.0"
arborium-julia = "2.16.0"
arborium-d = "2.16.0"
arborium-powershell = "2.16.0"
arborium-cmake = "2.16.0"
arborium-ocaml = "2.16.0"
arborium-bash = "2.16.0"
arborium-nix = "2.16.0"
arborium-lean = "2.16.0"

# HTTP server for serve command
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", default-features = false, features = [
  "rt",
  "net",
  "sync",
  "time",
  "process",
  "io-util",
  "macros",
] }
tower-http = { version = "0.6", features = ["cors"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }
futures-util = "0.3"
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8"

# Full-text search
tantivy = "0.22"

# HTML templating (compile-time, component-style)
maud = "0.26"

# Markdown processing (with syntax highlighting and diagram handlers)
marq = { version = "2.2.0", features = ["all-handlers", "lang-vixen"] }
pulldown-cmark = "0.13"

# CLI/runtime dependencies
indoc = "2"
urlencoding = "2.1"
blake3 = "1.5"
rust-mcp-sdk = { version = "0.8", default-features = false, features = [
  "stdio",
  "server",
  "macros",
] }
async-trait = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
url = { version = "2", features = ["serde"] }
tower-lsp = "0.20"
open = "5"
dirs = "6.0.0"
facet-typescript = { version = "0.44" }
time = { version = "0.3", features = ["formatting"] }
tempfile = "3.24.0"

# roam RPC framework
roam = "7.0.0"
roam-core = "7.0.0"
roam-stream = "7.0.0"
roam-local = "7.0.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
