[package]
name = "tracey-lsp-proto"
version = "0.1.0"
edition.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "tracey-lsp-proto"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { workspace = true, features = ["rt-multi-thread", "io-std"] }
