[package]
name = "tracey-proto"
version = "1.0.0"
description = "Protocol definitions for tracey daemon RPC"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
# roam RPC framework
roam = { git = "https://github.com/bearcove/roam", rev = "9129c6fd10e09a5e3c40974097d478c8301b9b75" }

# API types (re-exported for convenience)
tracey-api = { path = "../tracey-api" }
tracey-core = { workspace = true }

# facet for Facet derives on request/response types
facet = { workspace = true }
