[package]
name = "tracey-proto"
version.workspace = true
description = "Protocol definitions for tracey daemon RPC"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
# roam RPC framework
roam = { workspace = true }

# API types (re-exported for convenience)
tracey-api = { workspace = true }
tracey-core = { workspace = true }

# facet for Facet derives on request/response types
facet = { workspace = true }
