[package]
name = "tracey-proto"
version.workspace = true
description = "Protocol definitions for the tracey spec coverage daemon RPC"
keywords = ["specification", "coverage", "traceability", "rpc", "tracey"]
categories = ["development-tools"]
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
# vox RPC framework
vox = { workspace = true }

# API types (re-exported for convenience)
tracey-api = { workspace = true }
tracey-core = { workspace = true }

# facet for Facet derives on request/response types
facet = { workspace = true }
