[package]
name = "tracey"
version.workspace = true
description = "CLI tool to measure spec coverage in Rust codebases"
keywords = ["specification", "coverage", "traceability", "testing", "documentation"]
categories = ["development-tools", "command-line-utilities"]
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "tracey"

[package.metadata.cargo-shear]
# Used by MCP tool macros in mcp.rs
ignored = ["facet-error", "serde_json", "url"]

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[lib]
name = "tracey"
path = "src/lib.rs"

[[bin]]
name = "tracey"
path = "src/main.rs"

[dependencies]
tracey-core = { workspace = true, features = ["walk", "parallel", "reverse"] }
tracey-api = { workspace = true }
tracey-proto = { workspace = true }
tracey-config = { workspace = true }

# Facet ecosystem for config parsing and CLI
facet = { workspace = true }
facet-styx = { workspace = true }
styx-embed = { workspace = true }
facet-json = { workspace = true }
facet-axum = { workspace = true }
figue = { workspace = true }

# Error handling
eyre = { workspace = true }
facet-error = { workspace = true }

# Pretty output
owo-colors = { workspace = true }
strsim = { workspace = true }
indoc = { workspace = true }

# File walking (for include patterns)
ignore = { workspace = true }
globset = { workspace = true }

# Markdown rendering with syntax highlighting and diagrams
marq = { workspace = true }

# Syntax highlighting for source files
arborium = { workspace = true }

# HTTP server for serve command
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
hyper-util = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }

# URL decoding for API
urlencoding = { workspace = true }

# Hashing for file conflict detection
blake3 = { workspace = true }

# Full-text search (optional)
tantivy = { workspace = true, optional = true }

# MCP server
rust-mcp-sdk = { workspace = true, features = ["stdio", "server", "macros"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true, features = ["serde"] }

# LSP server
tower-lsp = { workspace = true }

# Open URLs in browser
open = { workspace = true }

# roam RPC framework (for daemon architecture)
roam = { workspace = true }
roam-stream = { workspace = true }
roam-local = { workspace = true }
dirs = { workspace = true }

[features]
default = ["search"]
search = ["dep:tantivy"]

[build-dependencies]
tracey-api = { workspace = true }
tracey-config = { workspace = true }
facet-typescript = { workspace = true }
facet-styx = { workspace = true }
time = { workspace = true, features = ["formatting"] }

[dev-dependencies]
tempfile = { workspace = true }
roam-core = { workspace = true }
